--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:tools="http://schemas.android.com/tools"
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <androidx.constraintlayout.widget.ConstraintLayout
+<layout>
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Activities.LoginActivity">
+        tools:context=".Activities.RegisterActivity">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -38,24 +38,25 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:paddingBottom="32dp"
-                    android:text="@string/login"
+                    android:text="@string/register"
                     android:textAlignment="center"
                     android:textSize="24sp"
                     android:textStyle="bold" />
 
+
                 <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:layout_marginBottom="8dp"
                     android:hint="@string/email"
-                    app:startIconCheckable="false"
-                    app:startIconDrawable="@drawable/icon_name_profile__style_false__size_24px">
+                    app:passwordToggleEnabled="false"
+                    app:startIconDrawable="@drawable/icon_name_message__style_false__size_24px">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/editEmail"
+                        android:id="@+id/email"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textAutoComplete"
+                        android:inputType="textEmailAddress"
                         tools:ignore="TextContrastCheck" />
 
                 </com.google.android.material.textfield.TextInputLayout>
@@ -77,29 +78,44 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <Button
-                    android:id="@+id/forgotPassword"
-                    style="@style/Widget.Material3.Button.TextButton"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="@string/forgot_password" />
-
-                <Button
-                    android:id="@+id/loginButton"
+                <com.google.android.material.textfield.TextInputLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/login"
-                    app:icon="@drawable/icon_name_login__style_false__size_24px"
-                    app:iconGravity="textEnd"
-                    tools:ignore="DuplicateSpeakableTextCheck" />
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="8dp"
+                    android:hint="@string/retype_password"
+                    app:passwordToggleEnabled="true"
+                    app:startIconDrawable="@drawable/icon_name_lock__style_false__size_24px">
+
+                    <com.google.android.material.textfield.TextInputEditText
+                        android:id="@+id/retypePassword"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:inputType="textPassword"
+                        tools:ignore="TextContrastCheck" />
+
+                </com.google.android.material.textfield.TextInputLayout>
+
+
 
                 <Button
                     android:id="@+id/registerButton"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/registration"
-                    app:icon="@drawable/icon_name_arrow_right__style_false__size_24px"
-                    app:iconGravity="textEnd" />
+                    android:layout_marginTop="8dp"
+                    android:text="@string/register"
+                    app:icon="@drawable/icon_name_checklist_circle__style_false__size_24px"
+                    app:iconGravity="textEnd"
+                    tools:ignore="DuplicateSpeakableTextCheck" />
+
+                <Button
+                    android:id="@+id/goToLoginButton"
+                    style="@style/Widget.Material3.Button.OutlinedButton"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:text="@string/go_back_to_login"
+                    app:icon="@drawable/icon_name_arrow_left__style_false__size_24px"
+                    app:iconGravity="textStart"
+                    tools:ignore="TextContrastCheck" />
 
 
             </LinearLayout>
