--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -49,13 +49,13 @@
                     android:layout_marginBottom="8dp"
                     android:hint="@string/email"
                     app:startIconCheckable="false"
-                    app:startIconDrawable="@drawable/icon_name_profile__style_false__size_24px">
+                    app:startIconDrawable="@drawable/icon_name_message__style_false__size_24px">
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editEmail"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:inputType="textAutoComplete"
+                        android:inputType="textAutoComplete|textEmailAddress"
                         tools:ignore="TextContrastCheck" />
 
                 </com.google.android.material.textfield.TextInputLayout>
