--- a/app/src/main/res/layout/activity_add_bill.xml
+++ b/app/src/main/res/layout/activity_add_bill.xml
@@ -5,14 +5,14 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Activities.GenerateInvoice">
+        tools:context=".Activities.AddBill">
 
         <TextView
             android:id="@+id/textView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
-            android:text="Generate Invoice"
+            android:text="Add Bill"
             android:textSize="20sp"
             app:layout_constraintStart_toEndOf="@id/backButton"
             app:layout_constraintTop_toTopOf="parent" />
@@ -49,11 +49,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:layout_margin="8dp"
-                    android:hint="Invoice for (Person)"
+                    android:hint="Bill Type"
                     app:startIconCheckable="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/editFor"
+                        android:id="@+id/billType"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textAutoComplete|textEmailAddress"
@@ -65,11 +65,11 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_margin="8dp"
-                    android:hint="Billed Month"
+                    android:hint="Bill amount"
                     app:startIconCheckable="false">
 
                     <com.google.android.material.textfield.TextInputEditText
-                        android:id="@+id/editMonth"
+                        android:id="@+id/billAmount"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:inputType="textAutoComplete|textEmailAddress"
@@ -77,64 +77,6 @@
 
                 </com.google.android.material.textfield.TextInputLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="horizontal">
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:layout_weight="1"
-                        android:hint="Issue date"
-                        app:startIconCheckable="false">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/editIssue"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textAutoComplete|textEmailAddress"
-                            tools:ignore="TextContrastCheck" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-
-                    <com.google.android.material.textfield.TextInputLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_margin="8dp"
-                        android:layout_weight="1"
-                        android:hint="Due date"
-                        app:startIconCheckable="false">
-
-                        <com.google.android.material.textfield.TextInputEditText
-                            android:id="@+id/editDue"
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:inputType="textAutoComplete|textEmailAddress"
-                            tools:ignore="TextContrastCheck" />
-
-                    </com.google.android.material.textfield.TextInputLayout>
-                </LinearLayout>
-
-                <TextView
-                    android:id="@+id/textView5"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_margin="16dp"
-                    android:text="Bills" />
-
-                <View
-                    android:id="@+id/divider7"
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:background="?android:attr/listDivider" />
-
-                <LinearLayout
-                    android:id="@+id/billsList"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:orientation="vertical"></LinearLayout>
             </LinearLayout>
 
         </ScrollView>
@@ -156,31 +98,18 @@
 
         <Button
             android:id="@+id/addBill"
-            style="@style/Widget.Material3.Button.IconButton.Outlined"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:layout_marginBottom="8dp"
-            android:text="Add Bill"
-            app:icon="@drawable/icon_name_plus_circle__style_false__size_24px"
-            app:iconGravity="textEnd"
-            app:layout_constraintBottom_toTopOf="@id/generateInvoice"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
-
-        <Button
-            android:id="@+id/generateInvoice"
+            style="@style/Widget.Material3.Button.IconButton.Filled"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="16dp"
-            android:text="Generate Invoice"
-            app:icon="@drawable/icon_name_checklist_circle__style_false__size_24px"
+            android:text="Add Bill"
+            app:icon="@drawable/icon_name_plus_circle__style_false__size_24px"
             app:iconGravity="textEnd"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
