--- a/app/src/main/res/layout/activity_tenant_home.xml
+++ b/app/src/main/res/layout/activity_tenant_home.xml
@@ -84,6 +84,18 @@
         </ScrollView>
 
         <ImageButton
+            android:id="@+id/refreshButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="@string/email"
+            android:minHeight="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/divider"
+            app:layout_constraintEnd_toStartOf="@id/optionsButton"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icon_name_refresh__style_false__size_24px" />
+
+        <ImageButton
             android:id="@+id/optionsButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
