--- a/app/src/main/res/layout/activity_generate_invoice.xml
+++ b/app/src/main/res/layout/activity_generate_invoice.xml
@@ -182,5 +182,17 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
+
+        <ImageButton
+            android:id="@+id/refreshButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:backgroundTint="#00FFFFFF"
+            android:contentDescription="@string/email"
+            android:minHeight="48dp"
+            app:layout_constraintBottom_toTopOf="@+id/scrollView2"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/icon_name_refresh__style_false__size_24px" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
